--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -217,6 +217,7 @@ html, body {
   transition: all 0.15s;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 6px;
 }
 
